--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -17,6 +17,7 @@
     <!-- Preconexion a Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" href="../assets/img/logo.jpg">
 
     <title>Crossover.sf EShop</title>
 </head>
@@ -28,7 +29,7 @@
             <div class="mid_head">
                 <!-- Nombre del sitio en el encabezado -->
                 <div class="nombre_head">
-                    <p>Crossover.sf</p>
+                    <p onclick="window.location.href='../index.html'">Crossover.sf</p>
                 </div>
 
                 <div class="buttons-nav">
@@ -69,7 +70,7 @@
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
-                <p>Crossover.sf</p>
+                <p onclick="window.location.href='../index.html'">Crossover.sf</p>
             </div>
             <div class="buttons-nav">
                 <button type="button" class="btn btn-primary position-relative"
