--- a/templates/faq.html
+++ b/templates/faq.html
@@ -15,7 +15,7 @@
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <link rel="icon" type="image/png" href="../assets/img/logo.jpg">
 
 
 
@@ -28,7 +28,7 @@
         <div class="big_navbar">
             <div class="mid_head">
                 <div class="nombre_head">
-                    <p>Crossover.sf</p>
+                    <p onclick="window.location.href='../index.html'">Crossover.sf</p>
                 </div>
                 <div class="buttons-nav">
                     <form class="search-box" action="/buscar" method="get">
@@ -66,7 +66,7 @@
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
-                <p>Crossover.sf</p>
+                <p onclick="window.location.href='../index.html'">Crossover.sf</p>
             </div>
             <div class="buttons-nav">
                 <button type="button" class="btn btn-primary position-relative"
