--- a/templates/item.html
+++ b/templates/item.html
@@ -17,6 +17,7 @@
     <!-- Conexión a fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/png" href="../assets/img/logo.jpg">
 
     <title>Crossover.sf EShop</title>
 </head>
@@ -27,7 +28,7 @@
         <div class="big_navbar">
             <div class="mid_head">
                 <div class="nombre_head">
-                    <p>Crossover.sf</p>
+                    <p onclick="window.location.href='../index.html'">Crossover.sf</p>
                 </div>
 
                 <div class="buttons-nav">
@@ -69,7 +70,7 @@
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none sticky-top">
         <div class="container-fluid">
             <div class="nombre_head">
-                <p>Crossover.sf</p>
+                <p >Crossover.sf</p>
             </div>
 
             <div class="buttons-nav">
