--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,241 @@ a {
   text-decoration: none;
 }
 
+@keyframes tilt-left {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-5deg);
+  }
+}
+@keyframes tilt-right {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(5deg);
+  }
+}
+@keyframes hoverEffect {
+  0% {
+    transform: translateY(0) scale(1);
+  }
+  100% {
+    transform: translateY(-5px) scale(1.01);
+  }
+}
+@keyframes hero-gradient-animation {
+  0% {
+    --x-0:93%;
+    --s-start-0:2%;
+    --s-end-0:78.72573401919361%;
+    --y-0:97%;
+    --c-0:hsla(55.58823529411776,0%,100%,0.86);
+    --y-1:96%;
+    --s-start-1:4.122011541632316%;
+    --s-end-1:78.72573401919361%;
+    --x-1:66%;
+    --c-1:hsla(260.735294117647,85%,73%,0.42);
+    --x-2:10%;
+    --s-start-2:2%;
+    --s-end-2:61.288600779667334%;
+    --y-2:93%;
+    --c-2:hsla(181.00000000000003,85%,73%,0.42);
+    --y-3:94%;
+    --x-3:48%;
+    --s-start-3:2%;
+    --s-end-3:61.288600779667334%;
+    --c-3:hsla(181.00000000000003,85%,73%,0.42);
+    --s-start-4:2%;
+    --s-end-4:61.288600779667334%;
+    --x-4:52%;
+    --c-4:hsla(252.7941176470588,85%,73%,0);
+    --y-4:79%;
+  }
+  100% {
+    --x-0:6%;
+    --s-start-0:1;
+    --s-end-0:85;
+    --y-0:92%;
+    --c-0:hsla(55.58823529411776,0%,100%,0.86);
+    --y-1:96%;
+    --s-start-1:1;
+    --s-end-1:85;
+    --x-1:28%;
+    --c-1:hsla(260.735294117647,85%,73%,0.42);
+    --x-2:43%;
+    --s-start-2:1;
+    --s-end-2:85;
+    --y-2:87%;
+    --c-2:hsla(181.00000000000003,85%,73%,0.42);
+    --y-3:96%;
+    --x-3:72%;
+    --s-start-3:1;
+    --s-end-3:85;
+    --c-3:hsla(181.00000000000003,85%,73%,0.42);
+    --s-start-4:1;
+    --s-end-4:85;
+    --x-4:72%;
+    --c-4:hsla(252.7941176470588,85%,73%,0);
+    --y-4:75%;
+  }
+}
+@property --x-0 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 93%;
+}
+@property --s-start-0 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 2%;
+}
+@property --s-end-0 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 78.7257340192%;
+}
+@property --y-0 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 97%;
+}
+@property --c-0 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsla(55.5882352941, 0%, 100%, 0.86);
+}
+@property --y-1 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 96%;
+}
+@property --s-start-1 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 4.1220115416%;
+}
+@property --s-end-1 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 78.7257340192%;
+}
+@property --x-1 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 66%;
+}
+@property --c-1 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsla(260.7352941176, 85%, 73%, 0.42);
+}
+@property --x-2 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 10%;
+}
+@property --s-start-2 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 2%;
+}
+@property --s-end-2 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 61.2886007797%;
+}
+@property --y-2 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 93%;
+}
+@property --c-2 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsla(181, 85%, 73%, 0.42);
+}
+@property --y-3 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 94%;
+}
+@property --x-3 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 48%;
+}
+@property --s-start-3 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 2%;
+}
+@property --s-end-3 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 61.2886007797%;
+}
+@property --c-3 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsla(181, 85%, 73%, 0.42);
+}
+@property --s-start-4 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 2%;
+}
+@property --s-end-4 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 61.2886007797%;
+}
+@property --x-4 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 52%;
+}
+@property --c-4 {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: hsla(252.7941176471, 85%, 73%, 0);
+}
+@property --y-4 {
+  syntax: "<percentage>";
+  inherits: false;
+  initial-value: 79%;
+}
+.your_css_selector_here {
+  --x-0:93%;
+  --y-0:97%;
+  --c-0:hsla(55.58823529411776,0%,100%,0.86);
+  --y-1:96%;
+  --x-1:66%;
+  --c-1:hsla(260.735294117647,85%,73%,0.42);
+  --x-2:10%;
+  --y-2:93%;
+  --c-2:hsla(181.00000000000003,85%,73%,0.42);
+  --y-3:94%;
+  --x-3:48%;
+  --c-3:hsla(181.00000000000003,85%,73%,0.42);
+  --x-4:52%;
+  --c-4:hsla(252.7941176470588,85%,73%,0);
+  --y-4:79%;
+  background-color: hsl(198, 14%, 16%);
+  background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
+  animation: hero-gradient-animation 10s linear infinite alternate;
+  background-blend-mode: overlay, normal, normal, normal, normal;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
 .bot_head ul {
   list-style: none;
   padding: 0;
@@ -44,6 +279,12 @@ a {
 .bot_head a {
   color: rgb(0, 0, 0);
   transition: all 0.3s ease;
+}
+
+.fl_bar p {
+  animation: marquee 10s linear infinite;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .bot_head {
@@ -963,6 +1204,14 @@ footer a {
   background-blend-mode: overlay, normal, normal, normal, normal;
 }
 
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
 .body-carrito {
   padding: 7vh 4%;
   display: flex;
@@ -1291,6 +1540,14 @@ footer a {
   background-blend-mode: overlay, normal, normal, normal, normal;
 }
 
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
 .tarjetero {
   width: 98vw;
   box-sizing: border-box;
