--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,4 +1,6 @@
 @import '../mixins';
+@import '../variables';
+@import '../animations';
 
 %unstyled-list {
   list-style: none;
@@ -9,6 +11,12 @@
 %link-base {
   color: $color_1;
   transition: all 0.3s ease;
+}
+
+.fl_bar p {
+  animation: marquee 10s linear infinite;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .bot_head {
