--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,7 +14,7 @@
 }
 
 .fl_bar p {
-  animation: marquee 10s linear infinite;
+  animation: marquee 10s linear infinite alternate;
   white-space: nowrap;
   display: inline-block;
 }
